# scientific-data-lab

./: .copilot-instructions.md  .gitignore  .gitmessage  CONTRIBUTING.md  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md
notebooks/: exploration.ipynb
scientific-data-lab/.github/workflows/: ci.yml
scientific-data-lab/docs/: architecture.md
scientific-data-lab/notebooks/: exploration.ipynb
scientific-data-lab/sample_data/: experiment_001.csv
scientific-data-lab/src/: __init__.py  analysis.py  signal_processing.py  visualization.py
scientific-data-lab/tests/: __init__.py  test_analysis.py
src/: data_loader.py  signal_processing.py  visualization.py
tests/: test_loader.py
